--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,5 @@
-/GaleriaPieza/
 /GaleriaConsola/
-/GaleriaGestionSesion/
+/GaleriaServiciosDeAdquisicion/
+/GaleriaPieza/
+/GaleriaModelo/
 /GaleriaEmpleados/
