Requerimientos Verificar venta e historia artista

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,7 @@
-/GaleriaEmpleados/
-/GaleriaConsola/
+/module-info.class
 /GaleriaModelo/
+/GaleriaConsola/
+/GaleriaServiciosDeAdquisicion/
+/GaleriaPieza/
+/GaleriaGestionSesion/
+/GaleriaEmpleados/
