--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,8 @@
-/module-info.class
-/GaleriaModelo/
 /GaleriaConsola/
-/GaleriaServiciosDeAdquisicion/
-/GaleriaPieza/
-/GaleriaGestionSesion/
 /GaleriaEmpleados/
+/GaleriaGestionSesion/
+/GaleriaModelo/
+/GaleriaPieza/
+/GaleriaServiciosDeAdquisicion/
+/module-info.class
+/testModelop/
