Revert "Persistencia escultura"
This reverts commit 028b8434257ed3fbb6bb49b3c3b0d87ee12cc502.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,8 @@
+/GaleriaConsola/
+/GaleriaEmpleados/
+/GaleriaGestionSesion/
 /GaleriaModelo/
 /GaleriaPieza/
+/GaleriaServiciosDeAdquisicion/
+/module-info.class
+/testModelop/
