--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,2 @@
-/testModelop/
-/testGestionDeSesion/
-/testEmpleados/
-/GaleriaGestionSesion/
-/GaleriaConsola/
-/GaleriaEmpleados/
+/Interfaz/
+/Listeners/
