--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,6 @@
-/GaleriaConsola/
-/GaleriaModelo/
-/Interfaz/
 /Listeners/
-/GaleriaEmpleados/
 /org/
-/GaleriaPieza/
 /testEmpleados/
 /testGestionDeSesion/
-/GaleriaGestionSesion/
+/testModelop/
+/Interfaz/
